--- a/COMP30027_2025_asst1.ipynb
+++ b/COMP30027_2025_asst1.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -225,10 +225,10 @@
       "lt: 0.0084\n",
       "call: 0.0083\n",
       "ok: 0.0078\n",
-      "come: 0.0075\n",
       "ur: 0.0075\n",
+      "come: 0.0075\n",
       "know: 0.0075\n",
-      "good: 0.0071\n",
+      "love: 0.0071\n",
       "\n",
       "Top 10 most probable words in scam class:\n",
       "call: 0.0274\n",
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -306,8 +306,8 @@
       "gt: 60.30\n",
       "lt: 59.73\n",
       "lor: 32.16\n",
-      "hope: 27.57\n",
       "ok: 27.57\n",
+      "hope: 27.57\n",
       "da: 22.40\n",
       "let: 20.10\n",
       "wat: 19.53\n",
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 619,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 598,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 604,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 605,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 606,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 607,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 620,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 609,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 611,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -921,19 +921,19 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Top 10 most predictive words for scam class (P(w|1) / P(w|0)) - Low-Confidence 200:\n",
-      "lt: 56.00\n",
+      "Top 10 most predictive words for non-malicious class (P(w|0) / P(w|1)) - Low-Confidence 200:\n",
       "gt: 56.00\n",
+      "lt: 56.00\n",
       "ok: 51.91\n",
       "lor: 29.75\n",
       "da: 19.83\n",
-      "let: 17.50\n",
       "wat: 17.50\n",
+      "let: 17.50\n",
       "lol: 16.33\n",
       "something: 16.33\n",
       "sorry: 16.04\n",
       "\n",
-      "Top 10 most predictive words for non-malicious class (P(w|0) / P(w|1)) - Low-Confidence 200:\n",
+      "Top 10 most predictive words for scam class (P(w|1) / P(w|0)) - Low-Confidence 200:\n",
       "prize: 77.15\n",
       "tone: 54.86\n",
       "claim: 54.00\n",
@@ -961,8 +961,8 @@
       "gt: 60.30\n",
       "lt: 59.73\n",
       "lor: 32.16\n",
-      "hope: 27.57\n",
       "ok: 27.57\n",
+      "hope: 27.57\n",
       "da: 22.40\n",
       "let: 20.10\n",
       "wat: 19.53\n",
@@ -992,11 +992,11 @@
     "# for word, ratio in predictive_random0:\n",
     "#     print(f\"{word}: {ratio:.2f}\")\n",
     "\n",
-    "print(\"\\nTop 10 most predictive words for scam class (P(w|1) / P(w|0)) - Low-Confidence 200:\")\n",
+    "print(\"\\nTop 10 most predictive words for non-malicious class (P(w|0) / P(w|1)) - Low-Confidence 200:\")\n",
     "for word, ratio in predictive_lowconf1:\n",
     "    print(f\"{word}: {ratio:.2f}\")\n",
     "\n",
-    "print(\"\\nTop 10 most predictive words for non-malicious class (P(w|0) / P(w|1)) - Low-Confidence 200:\")\n",
+    "print(\"\\nTop 10 most predictive words for scam class (P(w|1) / P(w|0)) - Low-Confidence 200:\")\n",
     "for word, ratio in predictive_lowconf0:\n",
     "    print(f\"{word}: {ratio:.2f}\")\n",
     "\n",
@@ -1015,15 +1015,6 @@
     "for word, ratio in top_predictive_0:\n",
     "    print(f\"{word}: {ratio:.2f}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
